feat: mid email로 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,8 +23,8 @@ logging:
     org:
       springframework: info
       zerock: debug
-#      springframework.security: trace
-      springframework.security: INFO
+      springframework.security: trace
+#      springframework.security: INFO
 
 
 org:
